# auth-categories-product-demo

./: .gitignore  README.md  main.py
auth-service/: .env.example  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
auth-service/app/: main.py
auth-service/app/core/: config.py  password.py  redis.py  security.py
auth-service/app/dependencies/: auth.py
auth-service/app/models/: __init__.py  role.py  user.py
auth-service/app/routers/: auth.py
auth-service/app/schemas/: __init__.py  auth.py  user_response.py
auth-service/app/services/: __init__.py  rate_limit_service.py  role_service.py  token_service.py  user_service.py
auth-service/migrations/: env.py
auth-service/migrations/versions/: 001_initial_users_table.py  002_add_last_name_to_users.py  003_create_roles_table.py  004_create_permissions_table.py  005_create_role_permissions_table.py  006_add_role_id_to_users.py
auth-service/tests/: conftest.py  test_health.py
auth-service/tests/integration/: test_auth_flow.py  test_rate_limiting.py  test_refresh_rotation.py  test_role_enforcement.py  test_roles.py  test_services_and_admin.py
auth-service/tests/unit/: test_password.py  test_role_hierarchy.py  test_security.py
product-service/: .env.example  README.md  alembic.ini  requirements.txt
product-service/app/: main.py
product-service/app/core/: config.py  database.py  logging_config.py  redis.py  slug.py  (+1 more)
product-service/migrations/: env.py
product-service/tests/: conftest.py
ui/: .env.example  README.md  index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css
(+76 files in other folders)
